tests/backend/checkmach/fail1.output
File "fail1.ml", line 3, characters 28-72:
Error: Annotation check for noalloc_strict failed on function camlFail1__test15_15
